# rpg_svo_pro_open_pytorch

./: .gitignore  NOTICE  PORTING_NOTES.md  README.md  pyproject.toml
configs/: default.yaml  euroc_mono.yaml
examples/: synthetic_sequence.py
examples/rpg_svo_pro_open/: README.md  evaluate_trajectory.py  prepare_bag.py
examples/rpg_svo_pro_open/calib/: svo_test_pinhole.yaml
examples/rpg_svo_pro_open/config/: pinhole.yaml
src/svo_torch/: __init__.py  __main__.py  alignment.py  camera.py  cli.py  config.py  datasets.py  depth.py  depth_filter.py  features.py  frame.py  geometry.py  image.py  initialization.py  io.py  odometry.py  optimization.py
tests/: test_alignment.py  test_camera.py  test_cli.py  test_config.py  test_datasets.py  test_depth.py  test_depth_filter_frontend.py  test_features.py  test_geometry.py  test_image.py  test_initialization.py  test_io.py  test_odometry.py  test_optimization.py  test_original_camera_examples.py  test_real_trajectory_evaluation.py
tests/data/original/: calib_cam.yaml  calib_omni.yaml
