[project]
name = "svo-torch"
version = "0.1.0"
description = "A tensor-native PyTorch port of the SVO Pro visual front end"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "GPL-3.0-only"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "SVO Torch contributors" },
]
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "torch>=2.4,<3",
]

[project.scripts]
svo-torch = "svo_torch.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/svo_torch"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
